--- a/css/style.css
+++ b/css/style.css
@@ -113,7 +113,7 @@ img {
 }
 .cricket-banner-images{
     overflow: hidden;
-    background-image: url(../images/hero-background.jpg);
+    background-image: url(../images/dhoni.webp);
     padding-top: 85px !important;
     /*padding-right: 0px;*/
     padding-bottom: 126px !important;
